<resources>
    <string name="app_name">File Manager</string>
    <string name="settings_db_name">settings</string>
    <string name="pinned_db_name">pinned</string>
    <string name="storage_media_table_name">storagemedia</string>
    <string name="bookmarks_table_name">bookmarks</string>
    <string name="default_storage_media_name">Storage Media</string>
    <string name="storage_media_type">Storage Media</string>
    <string name="storage_media_exists_message">Storage media already exists in list of pinned items</string>
    <string name="storage_media_add_error_message">Failed to add storage media</string>
    <string name="pinned_item_exists_message">Item already exists in list of pinned items</string>
    <string name="view_title">View</string>
    <string name="list_view_title">List view</string>
    <string name="grid_view_title">Grid view</string>
    <string name="hidden_files_hide_title">Do not show hidden files</string>
    <string name="hidden_files_show_title">Show hidden files</string>
    <string name="sort_title">Sorting</string>
    <string name="sort_by_name_title">Name</string>
    <string name="sort_by_date_title">Date</string>
    <string name="sort_by_size_title">Size</string>
    <string name="sort_ascending_title">Ascending</string>
    <string name="sort_descending_title">Descending</string>
    <string name="details_title">Details</string>
    <string name="details_dialog_title">Details</string>
    <string name="details_name">Name: </string>
    <string name="details_type">Type: </string>
    <string name="details_num_files">Files: </string>
    <string name="details_size">Size: </string>
    <string name="details_volumesize">Total size: </string>
    <string name="details_freespace">Free space: </string>
    <string name="copy_title">Copy</string>
    <string name="cut_title">Cut</string>
    <string name="paste_title">Paste</string>
    <string name="copy_existing_items_found_title">Existing file(s) found</string>
    <string name="copy_existing_items_found_message">Skip existing files, copy the files with a numbered name or overwrite them?</string>
    <string name="copy_overwrite_button_text">Overwrite</string>
    <string name="copy_skip_button_text">Skip</string>
    <string name="copy_rename_button_text">Rename</string>
    <string name="copy_progress_title">Copying…</string>
    <string name="move_progress_title">Moving…</string>
    <string name="delete_title">Delete</string>
    <string name="delete_confirmation_title">Delete</string>
    <string name="delete_confirmation_message">Confirm delete?</string>
    <string name="delete_progress_title">Deleting…</string>
    <string name="rename_title">Rename</string>
    <string name="rename_dialog_title">New name:</string>
    <string name="new_text_file_title">New text file</string>
    <string name="new_file_dialog_title">New text file name</string>
    <string name="new_file_exists">File exists in this directory</string>
    <string name="new_file_not_created">File could not be created</string>
    <string name="new_folder_title">New folder</string>
    <string name="new_folder_dialog_title">New folder name</string>
    <string name="new_folder_exists">Folder exists in this directory</string>
    <string name="add_storage_media_title">Add storage media</string>
    <string name="add_to_pinned_title">Add to pinned items</string>
    <string name="select_all_title">Select all</string>
    <string name="deselect_all_title">Deselect all</string>
    <string name="undo_title">Undo</string>
    <string name="about_title">About</string>
    <string name="about_dialog_title">About</string>
    <string name="about_text"> </string>
    <string name="confirm_button_text">OK</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="close_button_text">Close</string>
    <string name="icon_thumbnail_content_description">Icon/Thumbnail</string>
    <string name="add_storage_media_dialog_title">Add storage media</string>
    <string name="add_storage_media_message">Please select the storage media root</string>
</resources>